# minted-api-rust

./: .env  Cargo.toml  README.md  Rocket.toml
src/: database.rs  helper.rs  main.rs  models.rs  record.rs  routers_data.rs  schema.rs  system_data.rs
src/models/: column.rs  mod.rs  record.rs  schema.rs
src/routers/: data_create_all.rs  data_delete_all.rs  data_delete_one.rs  data_select_any.rs  data_select_one.rs  data_update_all.rs  data_update_one.rs  mod.rs  test_diesel.rs  test_ping.rs
