[package]
name = "minted-api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_contrib = "0.4"
serde = "1.0.188"
serde_json = "1.0.105"
tokio = { version = "1", features = ["full"] }
