[package]
name = "minted-api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_contrib = "0.4"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.1.1", features = ["postgres", "uuid"] }
dotenvy = "0.15"
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["serde"] }
